--- a/.env
+++ b/.env
@@ -3,11 +3,12 @@ AWS_REGION_NAME=ap-south-1
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
 SENDER_EMAIL=janumpallydivya15@gmail.com
-SENDER_PASSWORD=umpb bimb pahp axmc
+SENDER_PASSWORD=byfo cuwt jgif zof
 ENABLE_EMAIL=True
 MEDICINES_TABLE_NAME=MediStock_Medicines
 USERS_TABLE_NAME=MediStock_Users
 SNS_TOPIC_ARN=arn:aws:sns:ap-south-1:120121146931:MediStockAlerts
 ENABLE_SNS=True
 PORT=5000
+
 FLASK_ENV=development
